--- a/package.json
+++ b/package.json
@@ -5,14 +5,18 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "dev": "nodemon app.js"
+    "dev": "nodemon app.js",
+    "build:css": "tailwind build public/css/style.tailwind.css -o public/css/style.css"
   },
   "keywords": [],
   "author": "Jeff Pottruff",
   "license": "ISC",
   "dependencies": {
+    "autoprefixer": "^10.2.4",
     "express": "^4.17.1",
-    "express-handlebars": "^5.2.0"
+    "express-handlebars": "^5.2.0",
+    "postcss": "^8.2.4",
+    "tailwindcss": "^2.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
