ADD onchange package. MODIFY build script

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js",
-    "build:css": "tailwind build public/css/style.tailwind.css -o public/css/style.css"
+    "tw:build": "tailwind build css/style.tailwind.css -o public/css/style.css",
+    "tw:watch": "onchange \"tailwind.config.js\" \"css/**/*.css\" -- npm run tw:build"
   },
   "keywords": [],
   "author": "Jeff Pottruff",
@@ -15,6 +16,7 @@
     "autoprefixer": "^10.2.4",
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
+    "onchange": "^7.1.0",
     "postcss": "^8.2.4",
     "tailwindcss": "^2.0.2"
   },
