MODIFY folder structure - css

--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js",
-    "tw:build": "tailwind build css/style.tailwind.css -o public/css/style.css",
-    "tw:prod": "cross-env NODE_ENV=production postcss build css/style.tailwind.css -o public/css/style.css",
-    "tw:watch": "onchange \"tailwind.config.js\" \"css/**/*.css\" -- npm run tw:build"
+    "tw:build": "tailwind build src/css/style.tailwind.css -o public/css/style.css",
+    "tw:prod": "cross-env NODE_ENV=production postcss build src/css/style.tailwind.css -o public/css/style.css",
+    "tw:watch": "onchange \"tailwind.config.js\" \"src/css/**/*.css\" -- npm run tw:build"
   },
   "keywords": [],
   "author": "Jeff Pottruff",
