--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js",
+    "test": "jest",
     "tw:build": "tailwind build src/css/style.tailwind.css -o public/css/style.css",
     "tw:prod": "cross-env NODE_ENV=production postcss build src/css/style.tailwind.css -o public/css/style.css",
     "tw:watch": "onchange \"tailwind.config.js\" \"src/css/**/*.css\" -- npm run tw:build"
@@ -24,6 +25,7 @@
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
+    "jest": "^26.6.3",
     "nodemon": "^2.0.7"
   }
 }
